chore: upgrade spring boot version (#405)